1. Edited User Changes.

--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,5 +1,5 @@
 <div class="col-md-6">
-  <h2 class="text-center">Edit User</h2>
+  <h2 class="text-center">Edited Users</h2>
   <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="email">Email address:</label>
